[gd_scene load_steps=20 format=3 uid="uid://678j1k3bc4f0"]

[ext_resource type="Script" path="res://scenes/sandbox_game.gd" id="1_088gv"]
[ext_resource type="PackedScene" uid="uid://bv440mct5fn50" path="res://scenes/gui/character_drop_area.tscn" id="2_6k266"]
[ext_resource type="Theme" uid="uid://duumt3ib4xkid" path="res://resources/themes/default_theme.tres" id="4_f6xea"]
[ext_resource type="Script" path="res://scenes/gui/cards_container.gd" id="4_k1a4f"]
[ext_resource type="PackedScene" uid="uid://cj258gv81mfi4" path="res://scenes/gui/character_card.tscn" id="5_axdvp"]
[ext_resource type="Texture2D" uid="uid://cb0j7rfbadd2f" path="res://resources/images/weapons/sword.svg" id="6_n33q0"]
[ext_resource type="Texture2D" uid="uid://jjamb05m1743" path="res://resources/images/ui/restart.svg" id="7_8gnuj"]
[ext_resource type="Texture2D" uid="uid://d2twu5af47kir" path="res://resources/images/ui/exit.svg" id="8_opp77"]
[ext_resource type="Texture2D" uid="uid://0hcksk1mjpk4" path="res://resources/images/ui/resume.svg" id="9_ypl0y"]

[sub_resource type="GDScript" id="GDScript_kvgeg"]
script/source = "extends PanelContainer


@export var drop_areas: Array[CharacterDropArea]
@export var prices: PackedInt32Array

@onready var cards: CardsContainer = $HBoxContainer/VBoxContainer/Scroll/Cards
@onready var scroll_bar: HScrollBar = $HBoxContainer/VBoxContainer/HScrollBar
@onready var scroll: Control = $HBoxContainer/VBoxContainer/Scroll


func _ready() -> void:
	for i in range(drop_areas.size()):
		var area = drop_areas[i]
		area.modulate = GameRunningData.teams_colors[i]
		area.character_dropped.connect(_on_drop_area_dopped.bind(i))
	prices.resize(drop_areas.size())
	
	cards.set_data(Assets.character_datas)
	get_tree().process_frame.connect(func():
		scroll_bar.max_value = cards.get_minimum_size().x
		scroll_bar.page = scroll.size.x
	, CONNECT_ONE_SHOT)


func _on_drop_area_dopped(position: Vector2, team_index: int) -> void:
	if not is_instance_valid(cards.selecting_card):
		return
	var character = cards.selecting_card.data.character_scene.instantiate() as Character
	character.position = position
	character.team_index = team_index
	%CharactersSpace.add_child(character)
	prices[team_index] += cards.selecting_card.data.price


func _on_h_scroll_bar_value_changed(value: float) -> void:
	cards.position.x = -value
"

[sub_resource type="GDScript" id="GDScript_h0t41"]
script/source = "extends Label

@export var team_index: int


func _ready() -> void:
	modulate = GameRunningData.teams_colors[team_index] * 0.7
	modulate.a = 1
	


func _process(delta: float) -> void:
	var characters_count_str = str(get_tree().get_nodes_in_group(GameRunningData.teams_names[team_index]).size())
	var team_price_str = \"($%s)\" % str(%CharactersCards.prices[team_index])
	match(horizontal_alignment):
		HORIZONTAL_ALIGNMENT_RIGHT:
			text = team_price_str + characters_count_str
		HORIZONTAL_ALIGNMENT_LEFT:
			text = characters_count_str + team_price_str
"

[sub_resource type="GDScript" id="GDScript_sl88w"]
script/source = "extends TextureButton


func _on_button_up() -> void:
	get_tree().paused = false
	get_tree().change_scene_to_file(\"res://scenes/game.tscn\")
"

[sub_resource type="GDScript" id="GDScript_n5ks7"]
script/source = "extends TextureButton


func _on_button_up() -> void:
	get_tree().paused = false
	get_tree().change_scene_to_file(\"res://scenes/title.tscn\")
"

[sub_resource type="Animation" id="Animation_0huj8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/GUI/GameOver:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/GUI/GameOver:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera2D:zoom")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/GUI/Opeartions/CharactersCards:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_3riog"]
resource_name = "game_over"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/GUI/GameOver:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/GUI/GameOver:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ojs5a"]
resource_name = "pause"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/GUI/Opeartions/CharactersCards:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.18, 1),
"update": 0,
"values": [Vector2(0, -128), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_t6s8e"]
resource_name = "resume"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/GUI/Opeartions/CharactersCards:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -128)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5wl7q"]
_data = {
"RESET": SubResource("Animation_0huj8"),
"game_over": SubResource("Animation_3riog"),
"pause": SubResource("Animation_ojs5a"),
"resume": SubResource("Animation_t6s8e")
}

[sub_resource type="GDScript" id="GDScript_pfxp2"]
script/source = "extends Camera2D


func shake(shake_distance: float) -> void:
	for i in range(10):
		offset = Vector2.from_angle(randf_range(-PI, PI)) * shake_distance
		await get_tree().process_frame
	offset = Vector2.ZERO
"

[node name="Game" type="Node2D"]
script = ExtResource("1_088gv")

[node name="Areas" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="RedArea" parent="Areas" instance=ExtResource("2_6k266")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00350237
anchor_top = -0.208333
anchor_right = 0.510447
anchor_bottom = 1.15432
offset_left = 0.965271
offset_right = -12.0347
grow_horizontal = 1
grow_vertical = 1

[node name="BlueArea" parent="Areas" instance=ExtResource("2_6k266")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.463542
anchor_top = -0.208333
anchor_right = 0.96441
anchor_bottom = 1.15432
offset_left = 42.0
offset_top = -2.0
offset_right = 41.0
offset_bottom = -2.0
grow_horizontal = 1
grow_vertical = 1

[node name="Spaces" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="CharactersSpace" type="Node2D" parent="Spaces" groups=["characters_space"]]
unique_name_in_owner = true
y_sort_enabled = true

[node name="ProjectilesSpace" type="Node2D" parent="Spaces" groups=["projectiles_space"]]

[node name="ParticlesSpace" type="Node2D" parent="Spaces" groups=["particles_space"]]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="CanvasLayer"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("4_f6xea")

[node name="Opeartions" type="Control" parent="CanvasLayer/GUI"]
process_mode = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PauseButton" type="Button" parent="CanvasLayer/GUI/Opeartions"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 566.0
offset_top = 12.0
offset_right = 622.0
offset_bottom = 68.0
grow_horizontal = 2
rotation = 1.55334
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 48
toggle_mode = true
text = "ã€“"
flat = true

[node name="CharactersCards" type="PanelContainer" parent="CanvasLayer/GUI/Opeartions" node_paths=PackedStringArray("drop_areas")]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.380392)
layout_mode = 1
anchors_preset = -1
offset_right = 1154.0
offset_bottom = 132.0
script = SubResource("GDScript_kvgeg")
drop_areas = [NodePath("../../../../Areas/RedArea"), NodePath("../../../../Areas/BlueArea")]

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/GUI/Opeartions/CharactersCards"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GUI/Opeartions/CharactersCards/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="Scroll" type="Control" parent="CanvasLayer/GUI/Opeartions/CharactersCards/HBoxContainer/VBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3

[node name="Cards" type="HBoxContainer" parent="CanvasLayer/GUI/Opeartions/CharactersCards/HBoxContainer/VBoxContainer/Scroll"]
layout_mode = 2
offset_left = 6.0
offset_right = 2966.0
offset_bottom = 76.0
script = ExtResource("4_k1a4f")
character_card_scene = ExtResource("5_axdvp")
team_index = -1
selection_cancelable = true

[node name="HScrollBar" type="HScrollBar" parent="CanvasLayer/GUI/Opeartions/CharactersCards/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="ExitButton" type="TextureButton" parent="CanvasLayer/GUI/Opeartions/CharactersCards/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("8_opp77")
ignore_texture_size = true
stretch_mode = 5

[node name="RestartButton" type="TextureButton" parent="CanvasLayer/GUI/Opeartions/CharactersCards/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("7_8gnuj")
ignore_texture_size = true
stretch_mode = 5

[node name="PlayButton" type="TextureButton" parent="CanvasLayer/GUI/Opeartions/CharactersCards/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("9_ypl0y")
ignore_texture_size = true
stretch_mode = 5

[node name="View" type="Control" parent="CanvasLayer/GUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="CanvasLayer/GUI/View"]
layout_mode = 0
offset_top = 601.0
offset_right = 571.0
offset_bottom = 649.0
theme_override_font_sizes/font_size = 48
text = "12345"
horizontal_alignment = 2
script = SubResource("GDScript_h0t41")

[node name="Label2" type="Label" parent="CanvasLayer/GUI/View"]
layout_mode = 0
offset_left = 571.0
offset_top = 601.0
offset_right = 1149.0
offset_bottom = 649.0
theme_override_font_sizes/font_size = 48
text = "12345"
script = SubResource("GDScript_h0t41")
team_index = 1

[node name="GameOver" type="Control" parent="CanvasLayer/GUI"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Back" type="ColorRect" parent="CanvasLayer/GUI/GameOver"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.290196, 0.290196, 0.290196, 0.745098)

[node name="Label" type="Label" parent="CanvasLayer/GUI/GameOver"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -214.0
offset_top = 56.0
offset_right = 218.0
offset_bottom = 152.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 96
text = "GAME OVER"

[node name="WinInfo" type="Control" parent="CanvasLayer/GUI/GameOver"]
unique_name_in_owner = true
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/GUI/GameOver/WinInfo"]
layout_mode = 0
offset_left = 520.0
offset_top = 182.0
offset_right = 659.0
offset_bottom = 324.0
texture = ExtResource("6_n33q0")
expand_mode = 1
stretch_mode = 5

[node name="Label2" type="Label" parent="CanvasLayer/GUI/GameOver/WinInfo"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -14.0
offset_top = 368.0
offset_right = 1123.0
offset_bottom = 464.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 96
text = "WINNER:A"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/GUI/GameOver"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.508
anchor_right = 0.508
offset_left = -144.216
offset_top = 505.0
offset_right = 143.784
offset_bottom = 601.0
theme_override_constants/separation = 96

[node name="Restart" type="TextureButton" parent="CanvasLayer/GUI/GameOver/HBoxContainer"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
texture_normal = ExtResource("7_8gnuj")
ignore_texture_size = true
stretch_mode = 5
script = SubResource("GDScript_sl88w")

[node name="Exit" type="TextureButton" parent="CanvasLayer/GUI/GameOver/HBoxContainer"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
texture_normal = ExtResource("8_opp77")
ignore_texture_size = true
stretch_mode = 5
script = SubResource("GDScript_n5ks7")

[node name="Anim" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
process_mode = 3
libraries = {
"": SubResource("AnimationLibrary_5wl7q")
}

[node name="Camera2D" type="Camera2D" parent="." groups=["game_camera"]]
position = Vector2(576, 324)
script = SubResource("GDScript_pfxp2")

[connection signal="button_down" from="CanvasLayer/GUI/Opeartions/PauseButton" to="." method="_on_pause_button_button_down"]
[connection signal="value_changed" from="CanvasLayer/GUI/Opeartions/CharactersCards/HBoxContainer/VBoxContainer/HScrollBar" to="CanvasLayer/GUI/Opeartions/CharactersCards" method="_on_h_scroll_bar_value_changed"]
[connection signal="button_up" from="CanvasLayer/GUI/Opeartions/CharactersCards/HBoxContainer/ExitButton" to="." method="_on_exit_button_button_up"]
[connection signal="button_up" from="CanvasLayer/GUI/Opeartions/CharactersCards/HBoxContainer/RestartButton" to="." method="_on_restart_button_button_up"]
[connection signal="button_up" from="CanvasLayer/GUI/Opeartions/CharactersCards/HBoxContainer/PlayButton" to="." method="_on_play_button_button_up"]
[connection signal="button_up" from="CanvasLayer/GUI/GameOver/HBoxContainer/Restart" to="." method="_on_restart_button_up"]
[connection signal="button_up" from="CanvasLayer/GUI/GameOver/HBoxContainer/Restart" to="CanvasLayer/GUI/GameOver/HBoxContainer/Restart" method="_on_button_up"]
[connection signal="button_up" from="CanvasLayer/GUI/GameOver/HBoxContainer/Exit" to="CanvasLayer/GUI/GameOver/HBoxContainer/Exit" method="_on_button_up"]
